--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 <body>
     <h1>欢迎来到我的简易网页</h1>
     <p>这是一个可以通过二维码扫描访问的网页。</p>
-    <img src="https://github.com/wangyangwang1990-cmyk/Public/blob/main/ApplicationFrameHost_mZ8NfI1Zyp.png?raw=true" alt="展示图片" style="display: block; margin: auto;">
+    <!--<img src="https://github.com/wangyangwang1990-cmyk/Public/blob/main/ApplicationFrameHost_mZ8NfI1Zyp.png?raw=true" alt="展示图片" style="display: block; margin: auto;"> -->
     
 </body>
 
 </html>
+
 
 
 
